--- a/a2/pom.xml
+++ b/a2/pom.xml
@@ -60,7 +60,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.a2/com.example.a2.HelloApplication</mainClass>
+                            <mainClass>com.example.a2/com.example.a2.TTrackerApp</mainClass>
                         </configuration>
                     </execution>
                 </executions>
